# legged-sim

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  SuperBuild.cmake  main.cpp
debug_tools/: legcontrolcommand_listener.py  legcontroldata_listener.py  state_estimator_listener.py  wbc_lcm_data_listener.py
include/: Debugger.h  ReceiveGamepadCommand.h  ReceiveLCMMessage.h  RobotController.h  RobotRunner.h  robotrunner.h  simulation.h
include/ControlParameters/: ControlParameterInterface.h  ControlParameters.h  MIT_UserParameters.h  RobotParameters.h
include/Controllers/: DesiredStateCommand.h  EmbeddedController.hpp  GaitScheduler.h  LegController.h  MIT_Controller.hpp  Ori_Controller.hpp  StateEstimatorContainer.h
include/Controllers/Estimators/: OrientationEstimator.h  PositionVelocityEstimator.h
include/Controllers/WBC_Ctrl/: WBC_Ctrl.hpp
include/Controllers/WBC_Ctrl/ContactSet/: FixedBodyContact.hpp
include/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.hpp
include/Controllers/convexMPC/: ConvexMPCLocomotion.h  RobotState.h  SparseCMPC.h
include/Dynamics/: ParseURDFtoQuadruped.h  Quadruped.h  buildModelFromURDF.h
include/FSM/: ControlFSM.h  ControlFSMData.h  FSM_State.h  FSM_State_BalanceStand.h  FSM_State_Locomotion.h  FSM_State_Passive.h  FSM_State_Vision.h
include/Simulation/: Simulation.h
include/Utilities/: RobotCommands.h
lcm-types/python/: leg_control_data_lcmt.py  state_estimator_lcmt.py
lcm_listeners/: LcmListener.py  contact_kalman_listener.py  debug_data_listener.py  leg_states_listener.py  motor_states_listener.py  state_est_debug_listener.py  state_estimator_listener.py  wbc_data_listener.py
lcm_listeners/old_listeners/: ContactState_listener.py  LegStates_listener.py  MotorStatesListener.py  WBC_Data_Listener.py  newLegStates_listener.py
lcm_types/cpp/: can_command_lcmt.hpp  can_data_lcmt.hpp  contact_kalman_lcmt.hpp  debug_data_lcmt.hpp  leg_control_data_lcmt.hpp  parameter_list_update_request_lcmt.hpp  parameter_list_update_response_lcmt.hpp  pulse_lcmt.hpp  state_est_debug_lcmt.hpp  state_estimator_lcmt.hpp  wbc_data_lcmt.hpp
lcm_types/lcm/: can_command_lcmt.lcm  can_data_lcmt.lcm  contact_kalman_lcmt.lcm  control_parameter_lcmt.lcm  debug_data_lcmt.lcm  leg_control_data_lcmt.lcm  pulse_lcmt.lcm  state_est_debug_lcmt.lcm  state_estimator_lcmt.lcm  wbc_data_lcmt.lcm
lcm_types/old_types/: README.md
lcm_types/python/: can_command_lcmt.py  can_data_lcmt.py  contact_kalman_lcmt.py  control_parameter_response_lcmt.py  debug_data_lcmt.py  leg_control_command_lcmt.py  leg_control_data_lcmt.py  parameter_list_update_request_lcmt.py  parameter_list_update_response_lcmt.py  pulse_lcmt.py  state_est_debug_lcmt.py  state_estimator_lcmt.py  wbc_data_lcmt.py
resource/opy_v05/: mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml  opy_v05.urdf  opy_v05.xml
resource/opy_v05/meshes/: ABDUCTION.stl  FOOT.stl  HIP_L.stl  HIP_R.stl  KNEE.stl  slope.stl
resource/simple_ghost_v60/: old-mc-mit-ctrl-user-parameters.yaml  simple_ghost_v60.urdf  simple_ghost_v60.xml
resource/solo12/: mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml  solo12.urdf  solo12.xml
resource/solo12/meshes/: box.stl  solo12.xml
rl/: simple_example.py
scripts/: GamepadPublisher.py  MacGamepadPublisher.py
src/: ReceiveGamepadCommand.cpp  ReceiveLCMMessage.cpp  RobotRunner.cpp  main.cpp  robotrunner.cpp  simulation.cpp
src/ControlParameters/: ControlParameters.cpp
src/Controllers/: DesiredStateCommand.cpp  EmbeddedController.cpp  GaitScheduler.cpp  LegController.cpp  MIT_Controller.cpp  Ori_Controller.cpp
src/Controllers/Estimators/: ContactEstimator.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
src/Controllers/WBC/WBIC/: KinWBC.cpp  WBIC.cpp
src/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp
src/Controllers/WBC_Ctrl/ContactSet/: FixedBodyContact.cpp  SingleContact.cpp
src/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp
src/Controllers/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp  BodyPostureTask.cpp  BodyRyRzTask.cpp  JPosTask.cpp  LinkPosTask.cpp  LocalHeadPosTask.cpp  LocalPosTask.cpp  LocalRollTask.cpp  LocalTailPosTask.cpp
src/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  Gait.cpp  GraphSearch.cpp  OsqpTriples.cpp  RobotState.cpp  SolverMPC.cpp  SparseCMPC.cpp  SparseCMPC_Math.cpp  convexMPC_interface.cpp  convexMPC_util.cpp
src/Dynamics/: Quadruped.cpp
src/FSM/: ControlFSM.cpp  FSM_State.cpp  FSM_State_BalanceStand.cpp  FSM_State_Locomotion.cpp  FSM_State_Passive.cpp  FSM_State_StandUp.cpp
src/Simulation/: Simulation.cpp
src/bridge/: main.cpp  robot_runner.cpp
